<resources>
    <string name="app_name">Coffee Order</string>
    <string name="topping">Topping</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="name">Name: \u0020 </string>
    <string name="whibbedcream_order"> isWhippedCream? \u0020 </string>
    <string name="chocolate_Order">isChocolate? \u0020 </string>
    <string name="price_Order">Price \u0020 </string>
    <string name="Thanks">Thank for your Order </string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
</resources>