<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Name"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvToppingTiltle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/etName"
        app:layout_constraintTop_toBottomOf="@id/etName"/>

    <CheckBox
        android:id="@+id/cbWhippedCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:paddingLeft="22dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/tvToppingTiltle"
        app:layout_constraintTop_toBottomOf="@id/tvToppingTiltle"/>

    <CheckBox
        android:id="@+id/cbChocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:paddingLeft="22dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/cbWhippedCream"
        app:layout_constraintTop_toBottomOf="@id/cbWhippedCream"/>

    <TextView
        android:id="@+id/tvQuantityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/cbChocolate"
        app:layout_constraintTop_toBottomOf="@id/cbChocolate"/>

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:onClick="decrease"
        android:text="@string/Minus"
        app:layout_constraintStart_toStartOf="@id/tvQuantityTitle"
        app:layout_constraintTop_toBottomOf="@id/tvQuantityTitle"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnMinus"
        app:layout_constraintStart_toEndOf="@id/btnMinus"
        app:layout_constraintTop_toTopOf="@id/btnMinus" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="increase"
        android:text="@string/Plus"
        app:layout_constraintStart_toEndOf="@id/tvDisplay"
        app:layout_constraintBottom_toBottomOf="@id/btnMinus"
        app:layout_constraintTop_toTopOf="@id/btnMinus"
        android:layout_marginStart="15dp"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calculator"
        android:text="@string/order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPlus"
        android:layout_marginTop="20dp"
        tools:ignore="UsingOnClickInXml" />
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnOrder"
        app:layout_constraintStart_toStartOf="@id/btnMinus"
        android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>